la terra di mazzo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "stazione"
+        "stazione",
+        "LaBattagliaDellaTerraDiMezzo"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
